<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="title_text">My Nanodegree Apps!</string>

    <string name="button1_text">Spotify Streamer</string>
    <string name="button1_hint">spotify</string>

    <string name="button2_text">SCORES APP</string>
    <string name="button2_hint">scores</string>

    <string name="button3_text">LIBRARY APP</string>
    <string name="button3_hint">library</string>

    <string name="button4_text">BUILD IT BIGGER</string>
    <string name="button4_hint">build it bigger</string>

    <string name="button5_text">XYZ READER</string>
    <string name="button5_hint">xyz reader</string>

    <string name="button6_text">CAPSTONE: MY OWN APP</string>
    <string name="button6_hint">capstone</string>
</resources>
