<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#d7d6d6">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_text"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="25dp" />

        <Button
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:text="@string/button1_text"
            android:id="@+id/button1"
            android:layout_gravity="center_horizontal"
            android:minWidth="@dimen/abc_dialog_fixed_width_major"
            android:background="#F08C35"
            android:layout_marginTop="20dp"
            android:onClick="sendMessage"
            android:hint="@string/button1_hint" />

        <Button
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:text="@string/button2_text"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:minWidth="@dimen/abc_dialog_fixed_width_major"
            android:background="#F08C35"
            android:layout_marginTop="20dp"
            android:onClick="sendMessage"
            android:hint="@string/button2_hint" />

        <Button
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:text="@string/button3_text"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:minWidth="@dimen/abc_dialog_fixed_width_major"
            android:background="#F08C35"
            android:layout_marginTop="20dp"
            android:onClick="sendMessage"
            android:hint="@string/button3_hint" />

        <Button
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:text="@string/button4_text"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:minWidth="@dimen/abc_dialog_fixed_width_major"
            android:background="#F08C35"
            android:layout_marginTop="20dp"
            android:onClick="sendMessage"
            android:hint="@string/button4_hint" />

        <Button
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:text="@string/button5_text"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:minWidth="@dimen/abc_dialog_fixed_width_major"
            android:background="#F08C35"
            android:layout_marginTop="20dp"
            android:onClick="sendMessage"
            android:hint="@string/button5_hint" />

        <Button
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:text="@string/button6_text"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:minWidth="@dimen/abc_dialog_fixed_width_major"
            android:background="#de1414"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"
            android:onClick="sendMessage"
            android:hint="@string/button6_hint" />
    </LinearLayout>
</RelativeLayout>
